--- a/spring-docs/src/main/resources/application.properties
+++ b/spring-docs/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 server.port=9090
 #debug=true
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.content.rest.baseUri=/spring-content
+#server.servlet.context-path=/springcontent
+
+spring.profiles.active=postgres,fs
+#spring-boot.run.profiles=postgres,fs
+
+spring.content.elasticsearch.autoindex=false
+
+
+# create, create-drop, validate, and update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.content.s3.bucket=spring-docs
 #logging.level.org.springframework.web=DEBUG
 #logging.level.com.emc.ecs.connector.spring=DEBUG
-logging.level.internal.org.springframework.content.rest.controllers=DEBUG
+#logging.level.internal.org.springframework.content.rest.controllers=DEBUG
 
 # Control root location of file store
 spring.content.fs.filesystemRoot=/tmp/spring-content-store
@@ -25,3 +35,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Log SQL
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+local.server.port=9091
