--- a/spring-docs/src/main/resources/application.properties
+++ b/spring-docs/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=9090
 # Solar URL
 solr.url=http://localhost:8983/solr/solr
 
-# Set active profile in property file for IDE runtime
-# spring.profiles.active=postgres,fs
+# Set active profile in property file for IDE runtime in-memory, mysql, postgres, sqlserver
+spring.profiles.active=in-memory,fs
 
 # Disable full text search by default
 spring.content.elasticsearch.autoindex=false
